versioned_docs/version-2.3.x/2-组件列表/2-组件列表.md
---
title: '组件列表'
sidebar_position: 2
---

模块列表包含绝大部分框架的核心模块以及社区模块介绍文档。

## 核心模块

`GoFrame` 提供了一些基础的、常用的模块，简单、易用和轻量级，并保持极少的外部依赖，这些模块由 `gf` 主仓库细致维护。

## 社区模块

社区模块主要由社区贡献并维护，大部分也是由 `gf` 主仓库的贡献者提供及维护，存放于 `gogf` 空间下，与 `gf` 主仓库处于同一级别。有的社区模块是从 `gf` 主仓库中剥离出来单独维护的模块，这些模块并不是特别常用，或者对外部依赖较重。

目前社区模块的文档未收录，社区模块使用方法请具体查看源码 `README.MD` 文件，由于社区模块大都是核心模块的具体接口具体，因此也可以查看相关联的核心模块文档。

## 相关文档

- [数据结构](output/goframe-v2.3-md/组件列表/数据结构)
  - [字典类型-gmap](output/goframe-v2.3-md/组件列表/数据结构/字典类型-gmap)
    - [字典类型-基本使用](output/goframe-v2.3-md/组件列表/数据结构/字典类型-gmap/字典类型-基本使用)
    - [字典类型-性能测试](output/goframe-v2.3-md/组件列表/数据结构/字典类型-gmap/字典类型-性能测试)
    - [字典类型-方法介绍](output/goframe-v2.3-md/组件列表/数据结构/字典类型-gmap/字典类型-方法介绍)
  - [数组类型-garray](output/goframe-v2.3-md/组件列表/数据结构/数组类型-garray)
    - [数组类型-基本使用](output/goframe-v2.3-md/组件列表/数据结构/数组类型-garray/数组类型-基本使用)
    - [数组类型-方法介绍](output/goframe-v2.3-md/组件列表/数据结构/数组类型-garray/数组类型-方法介绍)
  - [集合类型-gset](output/goframe-v2.3-md/组件列表/数据结构/集合类型-gset)
    - [集合类型-基本使用](output/goframe-v2.3-md/组件列表/数据结构/集合类型-gset/集合类型-基本使用)
    - [集合类型-性能测试](output/goframe-v2.3-md/组件列表/数据结构/集合类型-gset/集合类型-性能测试)
    - [集合类型-方法介绍](output/goframe-v2.3-md/组件列表/数据结构/集合类型-gset/集合类型-方法介绍)
  - [链表类型-glist](output/goframe-v2.3-md/组件列表/数据结构/链表类型-glist)
    - [链表类型-基本使用](output/goframe-v2.3-md/组件列表/数据结构/链表类型-glist/链表类型-基本使用)
    - [链表类型-性能测试](output/goframe-v2.3-md/组件列表/数据结构/链表类型-glist/链表类型-性能测试)
  - [泛型类型-gvar](output/goframe-v2.3-md/组件列表/数据结构/泛型类型-gvar)
    - [泛型类型-基本使用](output/goframe-v2.3-md/组件列表/数据结构/泛型类型-gvar/泛型类型-基本使用)
    - [泛型类型-方法介绍](output/goframe-v2.3-md/组件列表/数据结构/泛型类型-gvar/泛型类型-方法介绍)
    - [泛型类型-注意事项](output/goframe-v2.3-md/组件列表/数据结构/泛型类型-gvar/泛型类型-注意事项)
  - [安全类型-gtype](output/goframe-v2.3-md/组件列表/数据结构/安全类型-gtype)
    - [安全类型-基本使用](output/goframe-v2.3-md/组件列表/数据结构/安全类型-gtype/安全类型-基本使用)
    - [安全类型-性能测试](output/goframe-v2.3-md/组件列表/数据结构/安全类型-gtype/安全类型-性能测试)
  - [队列类型-gqueue](output/goframe-v2.3-md/组件列表/数据结构/队列类型-gqueue)
    - [队列类型-基本使用](output/goframe-v2.3-md/组件列表/数据结构/队列类型-gqueue/队列类型-基本使用)
    - [队列类型-性能测试](output/goframe-v2.3-md/组件列表/数据结构/队列类型-gqueue/队列类型-性能测试)
  - [树形类型-gtree](output/goframe-v2.3-md/组件列表/数据结构/树形类型-gtree)
    - [树形类型-基本使用](output/goframe-v2.3-md/组件列表/数据结构/树形类型-gtree/树形类型-基本使用)
    - [树形类型-方法介绍](output/goframe-v2.3-md/组件列表/数据结构/树形类型-gtree/树形类型-方法介绍)
  - [对象复用-gpool](output/goframe-v2.3-md/组件列表/数据结构/对象复用-gpool)
    - [对象复用-基本使用](output/goframe-v2.3-md/组件列表/数据结构/对象复用-gpool/对象复用-基本使用)
  - [并发安全环-gring](output/goframe-v2.3-md/组件列表/数据结构/并发安全环-gring)
    - [并发安全环-基本使用](output/goframe-v2.3-md/组件列表/数据结构/并发安全环-gring/并发安全环-基本使用)
    - [并发安全环-方法介绍](output/goframe-v2.3-md/组件列表/数据结构/并发安全环-gring/并发安全环-方法介绍)
- [系统相关](output/goframe-v2.3-md/组件列表/系统相关)
  - [定时器-gtimer](output/goframe-v2.3-md/组件列表/系统相关/定时器-gtimer)
    - [定时器-基本使用](output/goframe-v2.3-md/组件列表/系统相关/定时器-gtimer/定时器-基本使用)
    - [定时器-性能测试](output/goframe-v2.3-md/组件列表/系统相关/定时器-gtimer/定时器-性能测试)
  - [内存锁-gmlock](output/goframe-v2.3-md/组件列表/系统相关/内存锁-gmlock)
  - [互斥锁-gmutex](output/goframe-v2.3-md/组件列表/系统相关/互斥锁-gmutex)
  - [上下文-gctx](output/goframe-v2.3-md/组件列表/系统相关/上下文-gctx)
  - [命令管理-gcmd](output/goframe-v2.3-md/组件列表/系统相关/命令管理-gcmd)
  - [日志管理-glog](output/goframe-v2.3-md/组件列表/系统相关/日志管理-glog)
  - [时间管理-gtime](output/goframe-v2.3-md/组件列表/系统相关/时间管理-gtime)
    - [时间管理-时间格式](output/goframe-v2.3-md/组件列表/系统相关/时间管理-gtime/时间管理-时间格式)
    - [时间管理-时间对象](output/goframe-v2.3-md/组件列表/系统相关/时间管理-gtime/时间管理-时间对象)
    - [时间管理-工具方法](output/goframe-v2.3-md/组件列表/系统相关/时间管理-gtime/时间管理-工具方法)
    - [时间管理-时区设置](output/goframe-v2.3-md/组件列表/系统相关/时间管理-gtime/时间管理-时区设置)
    - [时间管理-方法介绍](output/goframe-v2.3-md/组件列表/系统相关/时间管理-gtime/时间管理-方法介绍)
  - [定时任务-gcron](output/goframe-v2.3-md/组件列表/系统相关/定时任务-gcron)
    - [定时任务-表达式](output/goframe-v2.3-md/组件列表/系统相关/定时任务-gcron/定时任务-表达式)
    - [定时任务-基本使用](output/goframe-v2.3-md/组件列表/系统相关/定时任务-gcron/定时任务-基本使用)
    - [定时任务-日志管理](output/goframe-v2.3-md/组件列表/系统相关/定时任务-gcron/定时任务-日志管理)
    - [定时任务-注意事项](output/goframe-v2.3-md/组件列表/系统相关/定时任务-gcron/定时任务-注意事项)
    - [定时任务-gcron与gtimer](output/goframe-v2.3-md/组件列表/系统相关/定时任务-gcron/定时任务-gcron与gtimer)
  - [缓存管理-gcache](output/goframe-v2.3-md/组件列表/系统相关/缓存管理-gcache)
  - [文件管理-gfile](output/goframe-v2.3-md/组件列表/系统相关/文件管理-gfile)
  - [资源管理-gres](output/goframe-v2.3-md/组件列表/系统相关/资源管理-gres)
  - [配置管理-gcfg](output/goframe-v2.3-md/组件列表/系统相关/配置管理-gcfg)
  - [环境变量-genv](output/goframe-v2.3-md/组件列表/系统相关/环境变量-genv)
  - [文件监控-gfsnotify](output/goframe-v2.3-md/组件列表/系统相关/文件监控-gfsnotify)
  - [进程管理-gproc](output/goframe-v2.3-md/组件列表/系统相关/进程管理-gproc)
    - [进程管理-基本使用](output/goframe-v2.3-md/组件列表/系统相关/进程管理-gproc/进程管理-基本使用)
    - [进程管理-进程通信](output/goframe-v2.3-md/组件列表/系统相关/进程管理-gproc/进程管理-进程通信)
    - [进程管理-信号监听](output/goframe-v2.3-md/组件列表/系统相关/进程管理-gproc/进程管理-信号监听)
    - [进程管理-链路跟踪](output/goframe-v2.3-md/组件列表/系统相关/进程管理-gproc/进程管理-链路跟踪)
  - [模板引擎-gview](output/goframe-v2.3-md/组件列表/系统相关/模板引擎-gview)
  - [协程管理-grpool](output/goframe-v2.3-md/组件列表/系统相关/协程管理-grpool)
  - [构建信息-gbuild](output/goframe-v2.3-md/组件列表/系统相关/构建信息-gbuild)
  - [对象信息-gstructs](output/goframe-v2.3-md/组件列表/系统相关/对象信息-gstructs)
- [文本处理](output/goframe-v2.3-md/组件列表/文本处理)
  - [字符串处理-gstr](output/goframe-v2.3-md/组件列表/文本处理/字符串处理-gstr)
  - [正则表达式-gregex](output/goframe-v2.3-md/组件列表/文本处理/正则表达式-gregex)
    - [正则表达式-基本使用](output/goframe-v2.3-md/组件列表/文本处理/正则表达式-gregex/正则表达式-基本使用)
    - [正则表达式-方法介绍](output/goframe-v2.3-md/组件列表/文本处理/正则表达式-gregex/正则表达式-方法介绍)
- [编码解码](output/goframe-v2.3-md/组件列表/编码解码)
  - [通用编解码-gjson](output/goframe-v2.3-md/组件列表/编码解码/通用编解码-gjson)
    - [通用编解码-对象创建](output/goframe-v2.3-md/组件列表/编码解码/通用编解码-gjson/通用编解码-对象创建)
    - [通用编解码-层级访问](output/goframe-v2.3-md/组件列表/编码解码/通用编解码-gjson/通用编解码-层级访问)
    - [通用编解码-Struct转换](output/goframe-v2.3-md/组件列表/编码解码/通用编解码-gjson/通用编解码-Struct转换)
    - [通用编解码-动态创建修改](output/goframe-v2.3-md/组件列表/编码解码/通用编解码-gjson/通用编解码-动态创建修改)
    - [通用编解码-数据格式转换](output/goframe-v2.3-md/组件列表/编码解码/通用编解码-gjson/通用编解码-数据格式转换)
    - [通用编解码-方法介绍](output/goframe-v2.3-md/组件列表/编码解码/通用编解码-gjson/通用编解码-方法介绍)
    - [通用编解码-FAQ](output/goframe-v2.3-md/组件列表/编码解码/通用编解码-gjson/通用编解码-FAQ)
  - [二进制编解码-gbinary](output/goframe-v2.3-md/组件列表/编码解码/二进制编解码-gbinary)
  - [BASE64编解码-gbase64](output/goframe-v2.3-md/组件列表/编码解码/BASE64编解码-gbase64)
  - [经典哈希函数-ghash](output/goframe-v2.3-md/组件列表/编码解码/经典哈希函数-ghash)
  - [HTML编解码-ghtml](output/goframe-v2.3-md/组件列表/编码解码/HTML编解码-ghtml)
  - [URL编解码-gurl](output/goframe-v2.3-md/组件列表/编码解码/URL编解码-gurl)
  - [XML编解码-gxml](output/goframe-v2.3-md/组件列表/编码解码/XML编解码-gxml)
  - [INI编解码-gini](output/goframe-v2.3-md/组件列表/编码解码/INI编解码-gini)
  - [YAML编解码-gyaml](output/goframe-v2.3-md/组件列表/编码解码/YAML编解码-gyaml)
  - [TOML编解码-gtoml](output/goframe-v2.3-md/组件列表/编码解码/TOML编解码-gtoml)
  - [字符集转换-gcharset](output/goframe-v2.3-md/组件列表/编码解码/字符集转换-gcharset)
  - [压缩/解压-gcompress](output/goframe-v2.3-md/组件列表/编码解码/压缩解压-gcompress)
- [数据管理](output/goframe-v2.3-md/组件列表/数据管理)
  - [数据库ORM-gdb](output/goframe-v2.3-md/组件列表/数据管理/数据库ORM-gdb)
  - [Redis客户端-gredis](output/goframe-v2.3-md/组件列表/数据管理/Redis客户端-gredis)
- [加密解密](output/goframe-v2.3-md/组件列表/加密解密)
  - [MD5算法-gmd5](output/goframe-v2.3-md/组件列表/加密解密/MD5算法-gmd5)
  - [AES算法-gaes](output/goframe-v2.3-md/组件列表/加密解密/AES算法-gaes)
  - [DES算法-gdes](output/goframe-v2.3-md/组件列表/加密解密/DES算法-gdes)
  - [SHA1算法-gsha1](output/goframe-v2.3-md/组件列表/加密解密/SHA1算法-gsha1)
  - [CRC32算法-gcrc32](output/goframe-v2.3-md/组件列表/加密解密/CRC32算法-gcrc32)
- [实用工具](output/goframe-v2.3-md/组件列表/实用工具)
  - [随机数-grand](output/goframe-v2.3-md/组件列表/实用工具/随机数-grand)
  - [唯一数-guid](output/goframe-v2.3-md/组件列表/实用工具/唯一数-guid)
  - [元数据-gmeta](output/goframe-v2.3-md/组件列表/实用工具/元数据-gmeta)
  - [类型转换-gconv](output/goframe-v2.3-md/组件列表/实用工具/类型转换-gconv)
  - [数据校验-gvalid](output/goframe-v2.3-md/组件列表/实用工具/数据校验-gvalid)
  - [分页管理-gpage](output/goframe-v2.3-md/组件列表/实用工具/分页管理-gpage)
  - [工具方法-gutil](output/goframe-v2.3-md/组件列表/实用工具/工具方法-gutil)
- [单元测试](output/goframe-v2.3-md/组件列表/单元测试)
  - [单元测试-gtest](output/goframe-v2.3-md/组件列表/单元测试/单元测试-gtest)
- [错误管理](output/goframe-v2.3-md/组件列表/错误管理)
  - [错误处理-gerror](output/goframe-v2.3-md/组件列表/错误管理/错误处理-gerror)
  - [错误码接口-gcode](output/goframe-v2.3-md/组件列表/错误管理/错误码接口-gcode)
- [功能调试](output/goframe-v2.3-md/组件列表/功能调试)
  - [调试功能-gdebug](output/goframe-v2.3-md/组件列表/功能调试/调试功能-gdebug)
- [I18N组件](output/goframe-v2.3-md/组件列表/I18N组件)
  - [国际化-gi18n](output/goframe-v2.3-md/组件列表/I18N组件/国际化-gi18n)